# zstack-analyzer

./: .gitignore  APPLE_SILICON_GUIDE.md  APPLE_SILICON_IMPLEMENTATION.md  BUILD_STATUS.md  CLI_INSTALLATION.md  CLI_QUICK_REFERENCE.md  CLI_STRUCTURE.txt  CLI_SUMMARY.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  LICENSE  MICROSCOPY_LOADER_README.md  README.md  SECURITY_AUDIT_REPORT.md  VERIFICATION_CHECKLIST.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  setup_apple_silicon.sh  start.sh  test_gpu_implementation.py  test_image_loading.py  verify_apple_silicon.py
api/: main.py
api/database/: connection.py
api/models/: analysis_result.py  image_stack.py
api/routes/: analysis.py  demo.py  images.py  validation.py
api/websocket/: __init__.py  events.py  manager.py
cli/: QUICKSTART.md  README.md  __init__.py  __main__.py  config.py
cli/commands/: __init__.py  analyze.py  benchmark.py  convert.py  info.py  serve.py
core/gpu/: README.md  __init__.py  analysis.py  deconvolution.py  device_manager.py  kernels.py  segmentation.py
core/processing/: analyzer.py  image_loader.py  metadata.py  thumbnail.py
decoders/: Cargo.toml
decoders/src/: czi_decoder.rs  lib.rs  metadata.rs  tiff_decoder.rs  utils.rs
demo/: IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  QUICKSTART.md  README.md  SHOWCASE.md  datasets.json  generator.py  setup.py
docs/: QUICK_START_WEBSOCKET.md  WEBSOCKET_INTEGRATION.md
examples/: automation.yaml  batch_analysis.sh  pipeline.py
frontend/: Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  KEYBOARD_SHORTCUTS.md  LANDING_PAGE.md  POWER_USER_GUIDE.md  QUICK_START.md  UI_IMPROVEMENTS.md  VOLUME_VIEWER_FILES.md  VOLUME_VIEWER_QUICKSTART.md  VOLUME_VIEWER_README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisDashboard.tsx  CommandPalette.tsx  ContextMenu.tsx  DemoBanner.tsx  DemoSelector.tsx  KeyboardShortcutsModal.tsx  Layout.tsx  ProcessingStatus.tsx  QuickActions.tsx  Toast.tsx  VolumeViewer.tsx  VolumeViewerIntegration.tsx  WebSocketProvider.tsx  index.ts
frontend/src/components/__tests__/: VolumeViewer.test.tsx
frontend/src/components/landing/: FeatureCard.tsx  HeroAnimation.tsx  MobileNav.tsx  README.md  StatsCounter.tsx  TechStack.tsx  index.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Progress.tsx  Select.tsx  Slider.tsx  Tabs.tsx  index.ts
frontend/src/config/: shortcuts.ts
frontend/src/hooks/: useKeyboard.ts  useWebSocket.ts
frontend/src/pages/: AnalysisResults.tsx  Dashboard.tsx  Demo.tsx  ImageUpload.tsx  ImageViewer.tsx  Landing.tsx  ValidationQueue.tsx  VolumeViewerDemo.tsx
frontend/src/services/: api.ts
frontend/src/shaders/: volumeShaders.ts
frontend/src/stores/: history.ts
frontend/src/types/: index.ts  volume.ts  websocket.ts
frontend/src/utils/: volumeUtils.ts
