[package]
name = "zstack-decoders"
version = "0.1.0"
edition = "2021"
authors = ["Z-Stack Team <team@zstack-analyzer.org>"]
description = "High-performance image format decoders for microscopy data"
license = "Apache-2.0"

[lib]
name = "zstack_decoders"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
pyo3 = { version = "0.22", features = ["extension-module"] }

# Image processing
tiff = "0.9"
byteorder = "1.5"
memmap2 = "0.9"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"

# Async and performance
tokio = { version = "1.0", features = ["full"], optional = true }
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["tiff-support", "czi-support"]
tiff-support = []
czi-support = []
nd2-support = []
lsm-support = []
async = ["tokio"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1